# daics-swat

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
data/: processed_swat_attack.parquet  processed_swat_merged.parquet  processed_swat_normal.parquet
runs/: thresholds.json
runs/ttnn/: section_0.pt
runs/wdnn/: best.pt  last.pt  run_summary.txt
scripts/: eval_detect.py  plot_detection_analysis.py  preprocess_swat.py  sanity_check_windows.py  train_ttnn.py  train_wdnn.py  tune_thresholds.py
src/daics/: cli.py  config.py
src/daics/data/: dataloaders.py  datasets.py  swat.py  windowing.py  windows.py
src/daics/detect/: thresholds.py
src/daics/eval/: detect.py  mse.py  thresholds.py
src/daics/models/: ttnn.py  wdnn.py
src/daics/train/: ttnn_trainer.py  wdnn_trainer.py
src/daics/utils/: logging.py
tests/: test_windowing.py
